# FIT-to-TCX

./: .gitignore  .gitmodules  .travis.yml  README  README.md  TODO  TODO.md  batch.sh  fittotcx.py  pyproject.toml  requirements.txt  setup.py  unitconvert.py
.github/workflows/: build.yml  test.yml
fittotcx/: __init__.py  program.py  unitconvert.py
tests/: __init__.py  test.fit  test.tcx
